# services/auth-service/internal/interface/http/development/routes.go
@@ -4,4 +4,5 @@ import "github.com/go-chi/chi/v5"
 
 func RegisterRoutes(router chi.Router, controller *DevelopmentController) {
 	router.Get("/api/v1/dev/auth/verification-messages/{challengeId}", controller.VirtualMessage)
+	router.Post("/api/v1/dev/auth/test-tokens/bulk", controller.BulkTokens)
 }
